fixed body not being fully visible when resized to move emeergency call box and changed footer whiterock branding to float left at certain width and open in new tab on click

--- a/assets/stylesheets/_body.scss
+++ b/assets/stylesheets/_body.scss
@@ -12,7 +12,7 @@ body {
 	padding: 85px 0 0 0;
 	margin: 0;
 
-	@include media(max-width 1000px) {
+	@include media(max-width 1100px) {
 		padding-bottom: 45px;
 	}
 }
